--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mozilla/readability": "^0.6.0",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsdom": "^26.1.0"
   }
 }
